# dbt-playground

./: pyproject.toml
chinook/: dbt_project.yml
chinook/.dbt/: profiles.yml
chinook/models/analytic/marketing/: anal_marketing__track_info.sql  schema.yml
chinook/models/staging/: stg_chinook__album.sql  stg_chinook__album_artist.sql  stg_chinook__artist.sql  stg_chinook__genre.sql  stg_chinook__media_track_genre.sql  stg_chinook__media_type.sql  stg_chinook__track_info.sql
chinook/tests/: track_info_sum.sql
jaffle_shop/: dbt_project.yml
jaffle_shop/.dbt/: .user.yml  profiles.yml
jaffle_shop/models/: my_model.sql
